cleaning up start_time stamp from storage_ts

--- a/notebooks/kiva/cost_analysis.ipynb
+++ b/notebooks/kiva/cost_analysis.ipynb
@@ -51,7 +51,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from dash import Dash,html,dcc"
+    "# from dash import Dash,html,dcc"
    ]
   },
   {
@@ -105,9 +105,9 @@
     "# Initialize query library\n",
     "from optiml.queries import SNFLKQuery\n",
     "qlib = SNFLKQuery(connection, 'KIV', cache_dir)\n",
-    "sdate = '2022-10-01'\n",
-    "edate = '2022-10-31'\n",
-    "print(f\"The analysis is carried our for date range {sdate} to {edate}\")"
+    "sdate = '2022-09-24'\n",
+    "edate = '2022-10-08'\n",
+    "# print(f\"The analysis is carried our for date range {sdate} to {edate}\")"
    ]
   },
   {
@@ -118,16 +118,19 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Analysis setup\n",
-    "- Date range: 10/1/22 to 10/12/22\n",
+    "<div class=\"alert alert-info\">\n",
     "\n",
-    "- Type of account with Snowflake - Standard Edition powered by GCP\n",
+    "* Analysis date range: '2022-09-24' to '2022-10-08'\n",
     "\n",
-    "- Credit to dollar conversion - $2 per credit\n"
+    "* Type of Snowflake account: Standard Edition\n",
+    "\n",
+    "* Credit to dollar conversion: `$`2 per credit\n",
+    "\n",
+    "</div>\n"
    ]
   },
   {
@@ -209,55 +212,88 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "### COMPUTE:\n",
-    " Average credits used for the Compute category reach a high at 9 a.m. and then a low at 7 p.m.\n",
-    " >Hourly credit consumption -\n",
-    "- Max: 27.04\t\t\n",
-    "- Time: 9:00 am\n",
-    "- Min: 9.18 \n",
-    "- Time: 7:00 pm"
+    "df_compute = df_by_category_ts[df_by_category_ts[\"category_name\"] == \"Compute\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "avg_consumption = df_compute.mean()\n",
+    "max_consumption = df_compute.loc[df_compute['credits'].idxmax()]\n",
+    "min_consumption = df_compute.loc[df_compute['credits'].idxmin()]\n",
+    "\n",
+    "print('Avg. consumption:')\n",
+    "print('-----------------')\n",
+    "print(avg_consumption)\n",
+    "\n",
+    "print('')\n",
+    "\n",
+    "print('Max. consumption:')\n",
+    "print('-----------------')\n",
+    "print(max_consumption)\n",
+    "\n",
+    "print('')\n",
+    "\n",
+    "print('Min. consumption:')\n",
+    "print('-----------------')\n",
+    "print(min_consumption)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Credits are consumed throughout the night from 8:00 p.m. to 8:00 a.m.\n",
-    "> Average hourly credit consumption between 8:00 pm - 8:00 am:\n",
-    "- Mean: 9.85\n",
-    "- Standard deviation: 0.48"
+    "### Analysis\n",
+    "\n",
+    "<div class=\"alert alert-info\">\n",
+    "\n",
+    "* Compute consumes > 95% of the budget. This is as expected. \n",
+    "* Cloud services in aggregate consume < 10% of the budget - which is consistent with no over charges for it. But needs to be looked at a warehouse level.\n",
+    "* The overall timeseries for credit consumption of cloud services credits is < 10% of compute.\n",
+    "* Storage cost if a small fraction of the `$` budget. Storage is charged by flat `$` amount per TB. For the timeseries we have spread that evenly through the day.\n",
+    "* The average compute compute consumption is Credits: 12.94, Dollars: `$`25.88, with peaks at 9 am and 2 pm. \n",
+    "* The typical compute through the night is non-zero at ~ 10 credits and might have opportunity for savings or for dithering peak workloads to alternate times.\n",
+    "* Check for compute bottlenecks and queue lengths for various warehouses, tasks, and queries at 9 am and 2 pm.\n",
+    "\n",
+    "</div>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "On the 8th, 9th and 10th of October, credits consumed at night increased , while at other times, they remained the same from previous days.\n",
-    "- Mean: 12.66\n",
-    "- Standard deviation: 0.419\n",
-    "- Increase in mean from the previous nights : 2.81"
+    "### Optiml TODO"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From October 1 - October 5, there is a peak in credit consumption at 2 pm.\n",
-    "- Average credit consumption: 29.5\n",
-    "- Increase from other days at 2 p.m : 12.8 "
+    "<div class=\"alert alert-warning\">\n",
+    "    \n",
+    "* Analyze the Cloud Services credit consumption on an hourly basis at a warehouse level to make sure no overages hourly by warehouse.\n",
+    "    \n",
+    "</div>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### CLOUD SERVICES\n",
-    "- The credits for cloud services follow a similar trend as compute with regards to daily timings.\n",
-    "- Usage of credits of cloud services are only charged if the daily consumption of cloud services resources exceeds 10% of the daily warehouse usage.\n",
-    "\n"
+    "### Optiml Recommendation\n",
+    "\n",
+    "<div class=\"alert alert-success\">\n",
+    "\n",
+    "* Set up a time varying resource monitor on the account level based on these usage patterns to flag any anomalous usage. \n",
+    "* Usage monitoring set naively i.e. without considering usage patterns can generate false positives/negatives causing nuisance alerts/shutdowns. \n"
    ]
   },
   {
@@ -306,15 +342,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- User GREGORYW incurs the maximum value of dollars and credits at 2418 and 1209, respectively.\n",
-    "- Users VERTX_PROD and DBT_PROD incur almost the same values of dollars and credit at 1497 and 748, respectively. \n",
-    "- Users DBT_DEV and ROBS spend the least value of dollars and credits compared to other users.\n"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -326,14 +353,67 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- The time series by user follows a similar trend as the time series by usage category graph with regards to usage of credits at daily time slots.\n",
-    "- The increase in credit usage on the 8th, 9th and 10th of October is because of usage increases by GREGORYW and DBT_DEV. The 2 p.m. credit usage spike from October 1- October 5 can also be attributed to those users. \n",
-    "\n",
-    "\n"
+    "### Analysis"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-info\">\n",
+    "    \n",
+    "* User GREGORYW incurs ~ 30% of the costs at ~ 1385 credits.\n",
+    "* Users VERTX_PROD and DBT_PROD have next highest consumption at ~ 20% and ~ 894 credits.\n",
+    "* Users DBT_DEV and ROBS spend the least value of dollars and credits compared to other users.\n",
+    "* User SNOWFLAKE \n",
+    "\n",
+    "* The time series by user follows a similar trend as the time series by usage category graph with regards to usage of credits at daily time slots.\n",
+    "* The increase in credit usage on the 8th, 9th and 10th of October is because of usage increases by GREGORYW and DBT_DEV. The 2 p.m. credit usage spike from October 1- October 5 can also be attributed to those users. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Optiml TODO"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-warning\">\n",
+    "\n",
+    "* Given the organizational context that GREGORYW is the primary infrastructure owner, tag these queries so they can be attributed better to organizational budgets.\n",
+    "* Get a clearer understanding of user roles VERTX_PROD and DBT_PROD since they seem like automated jobs and put appropriate user account level resource monitoring around them based on historical usage.\n",
+    "\n",
+    " \n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Optiml Recommendation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -518,7 +598,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "optiml",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
