--- a/notebooks/kiva/query_analysis.ipynb
+++ b/notebooks/kiva/query_analysis.ipynb
@@ -684,7 +684,14 @@
     "\n",
     "* For most expensive queries i.e. consuming most credits steps are:\n",
     "  * Look at the amount of data the queries are operating on to see if it passes the sniff test\n",
-    "  * Idenitfy causes of credit consumption e.g. using INSERT instead of COPY_TO"
+    "  * Idenitfy causes of credit consumption:\n",
+    "    * Check if warehouse has auto suspend setup properly - queries that are analyzed quickly dont wake up the Warehouse for a long time\n",
+    "    * Check if the warehouse has timeout set properly\n",
+    "    * Check warehouse size is not too big for the query\n",
+    "    * In query writing e.g. using INSERT instead of COPY_TO\n",
+    "    * Due to warehouse sizing e.g. execssive spillage to local/remote disks\n",
+    "    * Use programmatic query profiling to analyze query (needs system access): https://docs.snowflake.com/en/sql-reference/functions/get_query_operator_stats.html\n",
+    "    * Check that the data is stored in same region with same provider"
    ]
   },
   {
@@ -711,7 +718,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.9.15 (main, Nov 24 2022, 08:28:41) \n[Clang 14.0.6 ]"
   },
   "vscode": {
    "interpreter": {
