corrected the spell mistake in wh notebook

--- a/notebooks/kiva/wh_analysis.ipynb
+++ b/notebooks/kiva/wh_analysis.ipynb
@@ -88,7 +88,7 @@
    "outputs": [],
    "source": [
     "df = qlib.idle_warehouses(sdate, edate)\n",
-    "df = df.fillna('UnassigSned')\n",
+    "df = df.fillna('Unassigned')\n",
     "df.head()"
    ]
   },
@@ -99,7 +99,7 @@
    "outputs": [],
    "source": [
     "df = qlib.wh_scaled_up_out()\n",
-    "df = df.fillna('UnassigSned')\n",
+    "df = df.fillna('Unassigned')\n",
     "df.head()"
    ]
   },
@@ -110,7 +110,7 @@
    "outputs": [],
    "source": [
     "df = qlib.wh_required_mcw()\n",
-    "df = df.fillna('UnassigSned')\n",
+    "df = df.fillna('Unassigned')\n",
     "df.head()"
    ]
   },
@@ -121,7 +121,7 @@
    "outputs": [],
    "source": [
     "df = qlib.wh_under_utilization()\n",
-    "df = df.fillna('UnassigSend')\n",
+    "df = df.fillna('Unassigned')\n",
     "df.head()"
    ]
   },
@@ -149,7 +149,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.15"
+   "version": "3.8.15 (default, Nov 24 2022, 14:38:14) [MSC v.1916 64 bit (AMD64)]"
   },
   "vscode": {
    "interpreter": {
