--- a/notebooks/kiva/query_analysis.ipynb
+++ b/notebooks/kiva/query_analysis.ipynb
@@ -51,7 +51,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from dash import Dash,html,dcc"
+    "# from dash import Dash,html,dcc"
    ]
   },
   {
@@ -254,7 +254,9 @@
    "outputs": [],
    "source": [
     "df=qlib.n_queries_spill_to_storage(sdate,edate,5)\n",
-    "df.head()"
+    "df.head()\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -365,6 +367,73 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### ANALYSIS\n",
+    "\n",
+    "<div class=\"alert alert-info\">\n",
+    "\n",
+    " Queries 1,2 and 3 fail after execution time for each being 29 minutes.\n",
+    "* Query 1 (query_id: 01a78b77-0604-f44d-0000-08d15ddd870e) - 300 GB spilling to local storage and 200 GB to remote storage.\n",
+    "* Query 2 (query_id: 01a78b55-0604-f44e-0000-08d15ddd55da) - 170 GB splilling to local storge and 90 GB to remote.\n",
+    "* Query 3 (query_id: 01a78b55-0604-f44e-0000-08d15ddd55d6) - 245 GB spilling to local and 78 GB to remote storage.\n",
+    "\n",
+    "Most partitions are scanned in the table for these 3 queries.\n",
+    "There are also multiple join and select statements for each query.\n",
+    "</div>\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Optiml TODO\n",
+    "\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-warning\">\n",
+    "    \n",
+    "* Check if best virtual warehouse practices can be applied to most queries in this warehouse\n",
+    "</div>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Optiml Recommendation\n",
+    "\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "<div class=\"alert alert-success\">\n",
+    "\n",
+    "* Utilize a larger warehouse - Warehouse sizes of Xsmall and Small are used. 100's of GB are spilled due to insufficient resources. \n",
+    "\n",
+    "* Optimize the query - Reducing the number of JOINS, SELECT and UNION statements would improve the performance.\n",
+    "\n",
+    "* Reduce the data that is being processed (Ex: Redunant columns used in computation).\n",
+    "\n",
+    "* Split processing into multiple steps."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Queries that scanned the most data"
    ]
   },
@@ -444,6 +513,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### ANALYSIS"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Inadequte pruning is observed. 99% of the partitions on the table are scanned.\n",
+    "* Execution time is 3.5 minutes.\n",
+    "* 2 GB is spilled onto local storage"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Query 2"
    ]
   },
@@ -454,6 +541,24 @@
    "outputs": [],
    "source": [
     "print(df.iloc[1][\"query_text\"])"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### ANALYSIS"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Inadequte pruning is observed. 99% of the partitions on the table are scanned.\n",
+    "* Execution time is 7.7 minutes.\n",
+    "* 16.9 GB is spilled onto local storage."
    ]
   },
   {
@@ -477,6 +582,44 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### ANALYSIS"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Inadequte pruning is observed. 99% of the partitions on the table are scanned.\n",
+    "* Execution time is 3.5 minutes.\n",
+    "* 2 GB is spilled onto local storage."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### OPTIML Recommendations"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Queries are the same.\n",
+    "* Cluster keys can be defined to reduce partitions scanned. \n",
+    "* Choose cluster key that appears frequently in a WHERE clause\n",
+    "* Scaling up warehouse would reduce bytes splilling to local storage\n",
+    "* Query can be optimized by reducing number of JOIN statements, eliminating redundant SELECT statements and using DISTINCT clauses."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Most cached queries"
    ]
   },
@@ -487,7 +630,7 @@
    "outputs": [],
    "source": [
     "df=qlib.n_most_cached_queries(sdate,edate,5)\n",
-    "df.head() "
+    "# df.head() \n"
    ]
   },
   {
@@ -588,8 +731,14 @@
    "outputs": [],
    "source": [
     "df=qlib.n_most_executed_select_queries(sdate,edate,10)\n",
-    "df.head() "
+    "df.head() \n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
@@ -680,18 +829,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Notes\n",
-    "\n",
-    "* For most expensive queries i.e. consuming most credits steps are:\n",
-    "  * Look at the amount of data the queries are operating on to see if it passes the sniff test\n",
-    "  * Idenitfy causes of credit consumption:\n",
-    "    * Check if warehouse has auto suspend setup properly - queries that are analyzed quickly dont wake up the Warehouse for a long time\n",
-    "    * Check if the warehouse has timeout set properly\n",
-    "    * Check warehouse size is not too big for the query\n",
-    "    * In query writing e.g. using INSERT instead of COPY_TO\n",
-    "    * Due to warehouse sizing e.g. execssive spillage to local/remote disks\n",
-    "    * Use programmatic query profiling to analyze query (needs system access): https://docs.snowflake.com/en/sql-reference/functions/get_query_operator_stats.html\n",
-    "    * Check that the data is stored in same region with same provider"
+    "## LONGEST RUNNING QUERIES"
    ]
   },
   {
@@ -699,12 +837,125 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df=qlib.longest_running_queries(sdate,edate,5)\n",
+    "df.head()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### QUERY 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(df.iloc[0][\"query_text\"])"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### QUERY 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(df.iloc[1][\"query_text\"])"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### QUERY 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(df.iloc[2][\"query_text\"])"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### ANALYSIS"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Queries are the same.\n",
+    "* Updating event query.\n",
+    "* Execution time for query is approximately 135 minutes.\n",
+    "* 65% of total partitions of table are scanned.\n",
+    "* No spillage onto local or remote storage.\n",
+    "* No Query overloading.\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### OPTIML to do"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Need to run update query to see if performance tuning can be done."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### OPTIML Recommendations\n",
+    "* Cluster keys can be defined to reduce execution time. WHERE clause present in query can be utilized.\n",
+    "* Warehouse scaling up won't help with performance.\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Notes\n",
+    "\n",
+    "* For most expensive queries i.e. consuming most credits steps are:\n",
+    "  * Look at the amount of data the queries are operating on to see if it passes the sniff test\n",
+    "  * Idenitfy causes of credit consumption e.g. using INSERT instead of COPY_TO"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "optiml",
+   "display_name": "sf",
    "language": "python",
    "name": "python3"
   },
@@ -718,11 +969,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15 (main, Nov 24 2022, 08:28:41) \n[Clang 14.0.6 ]"
+   "version": "3.8.2"
   },
   "vscode": {
    "interpreter": {
-    "hash": "fcbd4ad66d969ea49516a1cf27383420b67e9e950ebdd1bbb64e01b736f968b6"
+    "hash": "ba286fab723f3beadf2310fa20d811dff5d5606e9e08a95b52f51185bcb3e19b"
    }
   }
  },
