updating query_analysis

--- a/notebooks/kiva/cost_analysis.ipynb
+++ b/notebooks/kiva/cost_analysis.ipynb
@@ -105,8 +105,9 @@
     "# Initialize query library\n",
     "from optiml.queries import SNFLKQuery\n",
     "qlib = SNFLKQuery(connection, 'KIV', cache_dir)\n",
-    "sdate = '2022-09-24'\n",
-    "edate = '2022-10-08'\n",
+    "sdate = '2022-09-12'\n",
+    "edate = '2022-10-12'\n",
+    "# Most recent rolling month that we have data for\n",
     "# print(f\"The analysis is carried our for date range {sdate} to {edate}\")"
    ]
   },
@@ -122,9 +123,9 @@
    "metadata": {},
    "source": [
     "## Analysis setup\n",
-    "<div class=\"alert alert-info\">\n",
+    "<div class=\"alert alert-warning\">\n",
     "\n",
-    "* Analysis date range: '2022-09-24' to '2022-10-08'\n",
+    "* Analysis date range: '2022-09-12' to '2022-10-12'\n",
     "\n",
     "* Type of Snowflake account: Standard Edition\n",
     "\n",
@@ -180,8 +181,8 @@
     "    subplot_titles=(\"Dollars\", \"Credits\")\n",
     ")\n",
     "\n",
-    "fig.add_trace(go.Pie(labels=df_by_usage_category['category_name'].tolist(), values=df_by_usage_category['dollars'].tolist(),name=\"Dollars\", rotation=45,marker_colors=color_scheme),row=1,col=1)\n",
-    "fig.add_trace(go.Pie(labels=df_by_usage_category['category_name'].tolist(), values=df_by_usage_category['credits'].tolist(),name='Credits', rotation=45,marker_colors=color_scheme),row=1,col=2)\n",
+    "fig.add_trace(go.Pie(labels=df_by_usage_category['category_name'].tolist(), values=df_by_usage_category['dollars'].tolist(),name=\"Dollars\", rotation=45, marker_colors=color_scheme),row=1,col=1)\n",
+    "fig.add_trace(go.Pie(labels=df_by_usage_category['category_name'].tolist(), values=df_by_usage_category['credits'].tolist(),name='Credits', rotation=45, marker_colors=color_scheme),row=1,col=2)\n",
     "\n",
     "fig.update_layout(\n",
     "    title={\n",
@@ -207,7 +208,7 @@
    "outputs": [],
    "source": [
     "df_by_category_ts = df.groupby(['category_name','hourly_start_time']).sum('numeric_only').reset_index()\n",
-    "fig = px.area(df_by_category_ts, x=\"hourly_start_time\", y=\"credits\", color=\"category_name\",color_discrete_sequence=color_scheme)\n",
+    "fig = px.area(df_by_category_ts, x=\"hourly_start_time\", y=\"dollars\", color=\"category_name\",color_discrete_sequence=color_scheme)\n",
     "fig.show()"
    ]
   },
@@ -255,13 +256,20 @@
     "\n",
     "<div class=\"alert alert-info\">\n",
     "\n",
-    "* Compute consumes > 95% of the budget. This is as expected. \n",
-    "* Cloud services in aggregate consume < 10% of the budget - which is consistent with no over charges for it. But needs to be looked at a warehouse level.\n",
-    "* The overall timeseries for credit consumption of cloud services credits is < 10% of compute.\n",
-    "* Storage cost if a small fraction of the `$` budget. Storage is charged by flat `$` amount per TB. For the timeseries we have spread that evenly through the day.\n",
-    "* The average compute compute consumption is Credits: 12.94, Dollars: `$`25.88, with peaks at 9 am and 2 pm. \n",
-    "* The typical compute through the night is non-zero at ~ 10 credits and might have opportunity for savings or for dithering peak workloads to alternate times.\n",
-    "* Check for compute bottlenecks and queue lengths for various warehouses, tasks, and queries at 9 am and 2 pm.\n",
+    "#### Compute\n",
+    "* Compute consumes > 95% of the budget. This is as expected.  \n",
+    "* The average compute consumption is Credits: 12.69, Dollars: `$`25.38, with usage peaks typically at 9 am and 2 pm. \n",
+    "* The typical compute through the night is non-zero at ~ 10 credits. \n",
+    "* The nightime compute consumption is flat till 23rd but becomes noisy starting 24th.\n",
+    "* There is an increase in nightime consumption on 9th and 10th of ~30% which reverts to usual pattern subsequently. \n",
+    "\n",
+    "#### Cloud Services\n",
+    "* Cloud services in aggregate consume < 10% of the budget - which is consistent with no over charges if this is true for each warehouse on an hourly basis.\n",
+    "* The overall timeseries for credit consumption of cloud services is also < 10% of compute.\n",
+    "\n",
+    "#### Storage\n",
+    "* Storage cost is a small fraction of the `$` budget. Storage is charged by flat `$` amount per TB starting at `$`23/TB. For the timeseries we have spread that evenly through the day.\n",
+    "* Storage costs are almost flat during the period.\n",
     "\n",
     "</div>"
    ]
@@ -270,30 +278,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Optiml TODO"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-warning\">\n",
-    "    \n",
-    "* Analyze the Cloud Services credit consumption on an hourly basis at a warehouse level to make sure no overages hourly by warehouse.\n",
-    "    \n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Optiml Recommendation\n",
+    "### Actions and Recommendations\n",
     "\n",
     "<div class=\"alert alert-success\">\n",
     "\n",
-    "* Set up a time varying resource monitor on the account level based on these usage patterns to flag any anomalous usage. \n",
-    "* Usage monitoring set naively i.e. without considering usage patterns can generate false positives/negatives causing nuisance alerts/shutdowns. \n"
+    "* Analyze Cloud Services credit consumption on an hourly basis at a warehouse level to make sure no overages hourly by warehouse.\n",
+    "* Investigate noisy night time usage after Sept 23.\n",
+    "* Investigate increased baseline consumption that occurs on 10th and 11th Oct.\n",
+    "* Evaluate the system for compute bottlenecks and queue lengths for - warehouses, tasks, and queries at 9 am and 2 pm due to usage spikes.\n",
+    "* Based on cost we expect ~300 GB storage is being used. Verify this number for consistency.\n",
+    "* Set up a time varying resource monitor on the account level based on these usage patterns to flag any anomalous usage. Usage monitoring set naively:\n",
+    "    * Will not be proactive about cost containment \n",
+    "    * Can generate false positives/negatives causing nuisance alerts/shutdowns. \n",
+    "* Evaluate opportunities for savings through:\n",
+    "    * Dithering peak workloads to alternate times.\n",
+    "    * Reducing weekend consumption \n",
+    "    * Dithering jobs to or reducing night time consumption\n",
+    "    \n",
+    "</div>"
    ]
   },
   {
@@ -365,41 +367,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Analysis"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "### Analysis\n",
     "<div class=\"alert alert-info\">\n",
     "    \n",
     "* User GREGORYW incurs ~ 30% of the costs at ~ 1385 credits.\n",
     "* Users VERTX_PROD and DBT_PROD have next highest consumption at ~ 20% and ~ 894 credits.\n",
     "* Users DBT_DEV and ROBS spend the least value of dollars and credits compared to other users.\n",
-    "* User SNOWFLAKE \n",
+    "* User SNOWFLAKE includes costs associated with storage, and Snowflake related functions - this makes total_cost_breakdown numbers self consistent with cost_by_user.\n",
+    "* The overall compute consumption patterns through the day are similar to total_cost_breakdown.\n",
+    "* There is an increase in credit usage on the 8th, 9th and 10th of October during off peak hours (~ 8 pm - 8 am) which can be attributed to the following users:\n",
+    "    * DBT_DEV: +100% \n",
+    "    * GREGORYW: +30%\n",
+    "    * Unassigned: +100%\n",
     "\n",
-    "* The time series by user follows a similar trend as the time series by usage category graph with regards to usage of credits at daily time slots.\n",
-    "* The increase in credit usage on the 8th, 9th and 10th of October is because of usage increases by GREGORYW and DBT_DEV. The 2 p.m. credit usage spike from October 1- October 5 can also be attributed to those users. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Optiml TODO"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-warning\">\n",
+    "* The increased noisiness in usage starting 24th is attributable to users ROBS and Unassigned. \n",
     "\n",
-    "* Given the organizational context that GREGORYW is the primary infrastructure owner, tag these queries so they can be attributed better to organizational budgets.\n",
-    "* Get a clearer understanding of user roles VERTX_PROD and DBT_PROD since they seem like automated jobs and put appropriate user account level resource monitoring around them based on historical usage.\n",
-    "\n",
-    " \n",
     "</div>"
    ]
   },
@@ -407,13 +389,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Optiml Recommendation"
+    "### Actions and Recommendations\n",
+    "<div class=\"alert alert-success\">\n",
+    "\n",
+    "* Queries for following users should be tagged better - so they can be attributed to organizations/projects/R&D.:\n",
+    "    * GREGORYW\n",
+    "    * Unassigned\n",
+    "* User roles associated with automated jobs should be tagged and have user account level resource monitoring around them based on historical usage: \n",
+    "    * VERTX_PROD\n",
+    "    * DBT_PROD\n",
+    "* Notify the admin 8th - 10th that users GREGORYW, Unassigned and DBT_DEV have increased credit consumption during off peak hours (~ 8 pm - 8 am) \n",
+    "* Set up a time varying resource monitor at account and user level based on usage patterns to flag any anomalous usage.    \n",
+    "    \n",
+    "</div>"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -473,23 +462,13 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- PROD_WH incurs the highest cost for warehouses amongst all with a dollar value of 1221.29, followed by DEV_WH with a dollar value of 797.61\n",
-    "- DAILY_REFRESH_WH’s cost is 347.14 and ML_WH’s cost is 140.47\n",
-    "- CLOUD_SERVICES_ONLY does not incur any costs.\n",
-    "\n"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "df_by_wh_ts = df.groupby(['warehouse_name','hourly_start_time']).sum('numeric_only').reset_index()\n",
-    "df_by_wh_ts.head()"
+    "# df_by_wh_ts.head()"
    ]
   },
   {
@@ -507,7 +486,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- The credit usage increase on the 8th, 9th, and 10th of October from other days is because of more credit consumption by DEV_WH.\n"
+    "### Analysis\n",
+    "<div class=\"alert alert-info\">\n",
+    "    \n",
+    "* Total credit consumption for all the warehouses combined is lower compared to total credit consumption overall and total credit consumption for all users combined.\n",
+    "    * This is because [warehouse metering history](https://docs.snowflake.com/en/sql-reference/functions/warehouse_metering_history.html) returns results only for the ACCOUNTADMIN role or any role that has been explicitly granted the MONITOR USAGE global privilege. \n",
+    "  \n",
+    "* PROD_WH incurs highest and > 50% of the costs at ~ 3110 credits.\n",
+    "* DEV_WH consumes next highest ~30% at ~ 1872 credits.\n",
+    "* DAILY_REFRESH_WH and ML_WH consume 14.6% and 3.6% respectively.\n",
+    "\n",
+    "* The increased credit consumption from 8th-10th Oct. is completely in DEV_WH where credit consumption increases by 200%. \n",
+    "    * This increase is similar in magnitude to 11-2 pm everyday for this WH - investigate if it was the same process run intentionally or not.\n",
+    "    \n",
+    "* PROD_WH shows a +200% increase on 1st Oct. from 1-5 pm which shows as a spike in other views as well but was not as prominent.\n",
+    "    \n",
+    "* Fewer credits consumed by DAILY_REFRESH_WH on Monday and Tuesday - would have expected that to be for weekend.\n",
+    "    \n",
+    "* Increased noisiness starting 24th is almost entirely coming from ML_WH.\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Actions and Recommendations\n",
+    "\n",
+    "<div class=\"alert alert-success\">\n",
+    "\n",
+    "* For better visibility grant MONITOR USAGE global privilege to all users. (Or look for alternatives to make warehouse credit consumption consistent with total credit consumption).\n",
+    "* Set WH level alerts for each WH - especially for DEV_WH and PROD_WH\n",
+    "* Tag jobs by function in PROD_WH and DEV_WH\n",
+    "* Set up a time varying resource monitor at warehouse level based on usage patterns to flag any anomalous usage.\n",
+    "    \n",
+    "</div>"
    ]
   },
   {
@@ -523,8 +536,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df=qlib.cost_by_partner_tool_ts(start_date=\"2022-01-01\", end_date=\"2022-02-02\")\n",
-    "df.head()"
+    "df=qlib.cost_by_partner_tool_ts(sdate, edate)\n",
+    "# df.head()"
    ]
   },
   {
@@ -553,7 +566,7 @@
     "    specs=[[{\"type\": \"pie\"}]],\n",
     ")\n",
     "\n",
-    "fig.add_trace(go.Pie(labels=df_by_pt['client_application_name'].tolist(), values=df_by_pt['approximate_credits_used'].tolist(),name='credits',marker_colors=color_scheme),row=1,col=1)\n",
+    "fig.add_trace(go.Pie(labels=df_by_pt['client_application_name'].tolist(), values=df_by_pt['approximate_credits_used'].tolist(),name='credits',marker_colors=color_scheme, rotation=45),row=1,col=1)\n",
     "\n",
     "fig.update_layout(\n",
     "    title={\n",
@@ -581,7 +594,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "fig = px.area(df_by_pt_ts, x=\"hourly_start_time\", y=\"approximate_credits_used\", color=\"client_application_name\",color_discrete_sequence=color_scheme)\n",
     "fig.show()"
    ]
@@ -592,8 +604,112 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "## Analyze if a specific client tool is attached with a specific warehouse. For each warehouse what percentage of credits are used by which tool?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_by_pt_wh_ts = df.groupby(['client_application_name', 'warehouse_name','hourly_start_time']).sum('numeric_only').reset_index()\n",
+    "df_by_pt_wh_ts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_by_pt_wh_ts[\"client_application_warehouse_name\"] = df_by_pt_wh_ts[\"client_application_name\"] + \"_\" + df_by_pt_wh_ts[\"warehouse_name\"]\n",
+    "df_by_pt_wh_ts.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_by_pt_wh_ts = df_by_pt_wh_ts.groupby([\"client_application_warehouse_name\",\"hourly_start_time\"]).sum(\"numeric_only\").reset_index()\n",
+    "df_by_pt_wh_ts.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = px.area(df_by_pt_wh_ts, x=\"hourly_start_time\", y=\"approximate_credits_used\", color=\"client_application_warehouse_name\",color_discrete_sequence=color_scheme)\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Analysis\n",
+    "<div class=\"alert alert-info\">\n",
+    "    \n",
+    "* Total credit consumption for all the warehouses combined is lower compared to total credit consumption overall and total credit consumption for all users combined.\n",
+    "    * This is because [warehouse metering history](https://docs.snowflake.com/en/sql-reference/functions/warehouse_metering_history.html) returns results only for the ACCOUNTADMIN role or any role that has been explicitly granted the MONITOR USAGE global privilege. \n",
+    "  \n",
+    "* PROD_WH incurs highest and > 50% of the costs at ~ 3110 credits.\n",
+    "* DEV_WH consumes next highest ~30% at ~ 1872 credits.\n",
+    "* DAILY_REFRESH_WH and ML_WH consume 14.6% and 3.6% respectively.\n",
+    "\n",
+    "* The increased credit consumption from 8th-10th Oct. is completely in DEV_WH where credit consumption increases by 200%. \n",
+    "    * This increase is similar in magnitude to 11-2 pm everyday for this WH - investigate if it was the same process run intentionally or not.\n",
+    "    \n",
+    "* PROD_WH shows a +200% increase on 1st Oct. from 1-5 pm which shows as a spike in other views as well but was not as prominent.\n",
+    "    \n",
+    "* Fewer credits consumed by DAILY_REFRESH_WH on Monday and Tuesday - would have expected that to be for weekend.\n",
+    "    \n",
+    "* Increased noisiness starting 24th is almost entirely coming from ML_WH.\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Actions and Recommendations\n",
+    "\n",
+    "<div class=\"alert alert-success\">\n",
+    "\n",
+    "* For better visibility grant MONITOR USAGE global privilege to all users. (Or look for alternatives to make warehouse credit consumption consistent with total credit consumption).\n",
+    "* Set WH level alerts for each WH - especially for DEV_WH and PROD_WH\n",
+    "* Tag jobs by function in PROD_WH and DEV_WH\n",
+    "* Set up a time varying resource monitor at warehouse level based on usage patterns to flag any anomalous usage.\n",
+    "    \n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#TODO: Implement cost of data transfers query using https://docs.snowflake.com/en/user-guide/cost-exploring-data-transfer.html"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
