fine tuned the query

--- a/notebooks/kiva/wh_analysis.ipynb
+++ b/notebooks/kiva/wh_analysis.ipynb
@@ -38,6 +38,9 @@
     "import plotly.graph_objects as go\n",
     "from plotly.subplots import make_subplots\n",
     "from tabulate import tabulate\n",
+    "## TODO : Need to install the matplotlib package/library\n",
+    "import matplotlib.pyplot as mat_plt\n",
+    "%matplotlib inline\n",
     "color_scheme=[\"red\",\"blue\",\"green\",\"orange\",\"purple\",\"brown\",\"pink\",\"gray\",\"olive\",\"cyan\",\"darkviolet\",\"goldenrod\",\"darkgreen\",\"chocolate\",\"lawngreen\"]"
    ]
   },
@@ -68,9 +71,9 @@
     "# Initialize query library\n",
     "from optiml.queries import SNFLKQuery\n",
     "qlib = SNFLKQuery(connection, 'KIV', cache_dir)\n",
-    "sdate = '2022-10-01'\n",
-    "edate = '2022-10-31'\n",
-    "print(f\"The analysis is carried our for date range {sdate} to {edate}\")"
+    "sdate = '2022-06-01'\n",
+    "edate = '2022-11-30'\n",
+    "print(f\"The analysis is carried out for date range {sdate} to {edate}\")"
    ]
   },
   {
@@ -98,9 +101,52 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = qlib.wh_scaled_up_out()\n",
+    "trace1  = go.Scatter(\n",
+    "        mode='lines+markers',\n",
+    "        x = df['date_month'],\n",
+    "        y = df['name'],\n",
+    "        name=\"Warehouse Name\",\n",
+    "        marker_color='crimson'\n",
+    "    )\n",
+    "\n",
+    "data = [trace1]\n",
+    "\n",
+    "layout = go.Layout(\n",
+    "    title_text='Most expensive queries',\n",
+    "    yaxis=dict(\n",
+    "        # range = [0, 100],\n",
+    "        title=\"Credits\"\n",
+    "    ),\n",
+    "    xaxis=dict(\n",
+    "        title=\"Query ID\"\n",
+    "    )\n",
+    ")\n",
+    "fig = go.Figure(data=data, layout=layout)\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = qlib.wh_scaled_up_out(sdate,edate,1)\n",
     "df = df.fillna('Unassigned')\n",
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mat_plt.bar(df[\"warehouse_name\"], df[\"spilling_read_ratio\"])\n",
+    "mat_plt.xlabel(\"Warehouses\")\n",
+    "mat_plt.ylabel(\"Spilling Ratio\")\n",
+    "mat_plt.title(\"Warehouse required scale up\")\n",
+    "mat_plt.show()"
    ]
   },
   {
@@ -142,7 +188,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.15 (default, Nov 24 2022, 14:38:14) [MSC v.1916 64 bit (AMD64)]"
+   "version": "3.8.15"
   },
   "vscode": {
    "interpreter": {
