--- a/notebooks/kiva/wh_analysis.ipynb
+++ b/notebooks/kiva/wh_analysis.ipynb
@@ -112,13 +112,12 @@
     "data = [trace1]\n",
     "\n",
     "layout = go.Layout(\n",
-    "    title_text='Most expensive queries',\n",
+    "    title_text='Idle Warehouses',\n",
     "    yaxis=dict(\n",
-    "        # range = [0, 100],\n",
-    "        title=\"Credits\"\n",
+    "        title=\"Warehouse\"\n",
     "    ),\n",
     "    xaxis=dict(\n",
-    "        title=\"Query ID\"\n",
+    "        title=\"Month\"\n",
     "    )\n",
     ")\n",
     "fig = go.Figure(data=data, layout=layout)\n",
