Query analysis notebook and changes to python file

--- a/notebooks/kiva/query_analysis.ipynb
+++ b/notebooks/kiva/query_analysis.ipynb
@@ -131,6 +131,7 @@
    "outputs": [],
    "source": [
     "df=qlib.n_expensive_queries(sdate,edate,5)\n",
+    "# df.to_csv('/home/manas/DS_data/most_expensive.csv')\n",
     "df.head()"
    ]
   },
@@ -179,6 +180,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Cost of running a query depends on the time to execute the query and the warehouse it is run on.\n",
+    "* Best practice to optimize would be to either reduce the execution time of the query or use efficient virtual warehouse practices.\n",
+    "* Establishing resource monitors to estimate credit usage would be beneficial."
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -202,6 +213,22 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### ANALYSIS\n",
+    "\n",
+    "* Has an execution time of 670 mins.\n",
+    "* SELECT statement\n",
+    "* Multiple JOIN statements in query.\n",
+    "* Most partitions are scanned.\n",
+    "* Executed using a SMALL warehouse.\n",
+    "* Scans 6.3 GB of data\n",
+    "* Scans 91% of data from cache\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -218,6 +245,22 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### ANALYSIS\n",
+    "* Execution time of 357 mins.\n",
+    "* FAILED query.\n",
+    "* Large number of bytes are spilled to both local (4719 GB) and remote (4491 GB) storage.\n",
+    "* Multiple JOIN statements in query.\n",
+    "* Most partitions are scanned.\n",
+    "* Executed using SMALL warehouse.\n",
+    "* Scans 83% of the data from cache.\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -231,6 +274,35 @@
    "outputs": [],
    "source": [
     "print(df.iloc[2][\"query_text\"])"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### ANALYIS\n",
+    "* Same query ran multiple times.\n",
+    "* UPDATE query\n",
+    "* Has execution time of 37 mins.\n",
+    "* Execution time remains constant.\n",
+    "* 146 GB of bytes scanned\n",
+    "* Scans 63% of total partitions\n",
+    "* Only 10% of data from cache is scanned."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### OPTIML RECOMMENDATIONS\n",
+    "\n",
+    "* PROD_WH can be scaled out as multicluster as large amount of data is being computed with several users using them.\n",
+    "* Defining clustering keys will help with reducing number of partitions in the table being scanned.\n",
+    "* Scaling up is also required for PROD_WH as bytes are being spilled causing failure of query.\n",
+    "* Update query not being cached enough, therefore autosuspension happens too quickly or cache needs to be built before running this query.\n",
+    "* Optimizing SELECT query by eliminating multiple JOINS, SELECT clauses."
    ]
   },
   {
@@ -603,7 +675,7 @@
    "outputs": [],
    "source": [
     "df=qlib.n_most_cached_queries(sdate,edate,5)\n",
-    "# df.head() \n"
+    "df.head() \n"
    ]
   },
   {
@@ -703,6 +775,7 @@
    "outputs": [],
    "source": [
     "df=qlib.n_most_executed_select_queries(sdate,edate,10)\n",
+    "# df.to_csv(\"/home/manas/DS_data/most_executed_select.csv\")\n",
     "df.head() \n",
     "\n"
    ]
@@ -794,6 +867,44 @@
    "outputs": [],
    "source": [
     "print(df.iloc[3][\"query_text\"])"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### ANALYSIS\n",
+    "* Query 1 was executed 116028 in 30 days\n",
+    "* Query 2 was executed 19770 in 30 days\n",
+    "* Query 3 was executed 13815 in 30 days."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### OPTIML Recommendations\n",
+    "* Can convert SELECT Queries as Materialized Views"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## MOST EXECUTED QUERIES\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df=qlib.caching_warehouse(sdate,edate,5)\n",
+    "df.head()"
    ]
   },
   {
@@ -945,7 +1056,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.8.2"
   },
   "vscode": {
    "interpreter": {
