--- a/notebooks/kiva/cost_analysis.ipynb
+++ b/notebooks/kiva/cost_analysis.ipynb
@@ -31,6 +31,7 @@
    "source": [
     "# Setting up displays\n",
     "from IPython.display import display, HTML\n",
+    "\n",
     "display(HTML(\"<style>.container { width:100% !important; }</style>\"))\n",
     "from dash import Dash,html,dcc,Input,Output\n",
     "app = Dash(__name__)\n",
@@ -107,9 +108,18 @@
     "qlib = SNFLKQuery(connection, 'KIV', cache_dir)\n",
     "sdate = '2022-09-12'\n",
     "edate = '2022-10-12'\n",
+    "\n",
+    "\n",
     "# Most recent rolling month that we have data for\n",
-    "# print(f\"The analysis is carried our for date range {sdate} to {edate}\")"
+    "print(f\"The analysis is carried our for date range {sdate} to {edate}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -135,6 +145,24 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### STANDARD DEVIATION AND MEAN OF CREDITS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df=qlib.total_breakdown_analysis(sdate,edate)\n",
+    "print(df)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -149,7 +177,8 @@
    "source": [
     "df = qlib.total_cost_breakdown_ts(sdate, edate)\n",
     "df = df.fillna('Unassigned')\n",
-    "# df.to_csv('/home/manas/DS_data/breakdown.csv')\n"
+    "df.head()\n",
+    "\n"
    ]
   },
   {
@@ -159,6 +188,7 @@
    "outputs": [],
    "source": [
     "df_by_usage_category = df.groupby(\"category_name\").sum(\"numeric_only\").reset_index()\n",
+    "df_by_usage_category.head()\n",
     "df_by_usage_category.loc[len(df.index)] = ['Total', df_by_usage_category['credits'].sum(), df_by_usage_category['dollars'].sum()]\n",
     "df_by_usage_category = df_by_usage_category.round(2)\n",
     "print(tabulate(df_by_usage_category, headers='keys', tablefmt='rounded_outline', showindex=False))"
@@ -537,7 +567,7 @@
    "outputs": [],
    "source": [
     "df=qlib.cost_by_partner_tool_ts(sdate, edate)\n",
-    "# df.head()"
+    "df.head()"
    ]
   },
   {
@@ -714,7 +744,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "sf",
    "language": "python",
    "name": "python3"
   },
@@ -728,11 +758,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.8.2"
   },
   "vscode": {
    "interpreter": {
-    "hash": "fcbd4ad66d969ea49516a1cf27383420b67e9e950ebdd1bbb64e01b736f968b6"
+    "hash": "ba286fab723f3beadf2310fa20d811dff5d5606e9e08a95b52f51185bcb3e19b"
    }
   }
  },
